Overflow on directions resolved.

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -4,7 +4,10 @@ html {
 
 body {
   height: 100%;
-  padding: 90px;
+  padding: 10%;
+  border-style: solid;
+  border-color:red;
+  margin: 1%
 }
 
 #panel {
@@ -21,11 +24,12 @@ body {
 #directions-panel, #station-info {
   border-style:solid;
   border-color: gray;
+  overflow-y: scroll;
+  height: 400px;
 }
 
 #map-canvas {
-  height: 250px;
-  float: left;
+  height: 400px;
   border-style: solid;
   border-color: red;
 }
